# Agent-

./: .gitignore  AUDIT_FIX_REPORT.md  CODE_REVIEW.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  HERMES_ACCEPTANCE_PLAN.md  HERMES_CHAIN_DEPENDENCY_DESIGN.md  HERMES_PHASE2_EQ_SPLIT_DESIGN.md  HERMES_SEND_FX_DESIGN.md  PRODUCTION_GAPS.md  PRODUCTION_GAPS_RESPONSE.md  PROJECT_STATUS.md  README.md  REAPER_Agent_Project_Management_Spec.md  RE_AUDIT_REPORT.md  diagnose_plugins.py  mkdocs.yml  output_bxt_only  phase0_diagnostic_report.json  pyproject.toml  verify_phase4.py  verify_phase5.py  verify_phase6.py
.claude/plans/: hermes-core-architecture.md  hermes-reboot.plan.md
.github/workflows/: ci.yml
docs/: MIXING_CHAIN_DESIGN.md  MIXING_KNOWLEDGE_BASE.md  index.md  quickstart.md  spatial-effects-design.md
docs/api/: agent_protocol.md  audit.md  automation.md  bridge.md  bus.md  chain_renderer.md  dag.md  dialog_handler.md  engine.md  exceptions.md  fx.md  fx_builder.md  master_templates.md  profiles.md  render.md  security.md  send.md  signal.md  spectrum.md  track.md
docs/dev/: architecture.md  contributing.md
docs/guides/: plugins.md  profiles.md
examples/: quick_start.py
profiles/: vocal_a_ballad.yaml  vocal_a_chinese_bel_canto.yaml  vocal_a_electronic.yaml  vocal_a_eq232d_test.yaml  vocal_a_folk.yaml  vocal_a_pop.yaml  vocal_a_rock.yaml  vocal_ballad.yaml  vocal_chinese_bel_canto.yaml  vocal_electronic.yaml  vocal_folk.yaml  vocal_hiphop.yaml  vocal_jazz.yaml  vocal_pop.yaml  vocal_rnb.yaml  vocal_rock.yaml
src/hermes_core/: __init__.py  __main__.py  agent_protocol.py  audio_utils.py  audit.py  automation.py  (+49 more)
tests/: conftest.py  test_agent_protocol.py  test_audio_utils.py  test_audit.py  test_automation.py  test_backing.py  test_bridge.py  test_bus.py  test_chain_renderer_pure.py  test_cla76.py  test_cli.py  test_config.py  test_coverage_fill.py  test_dag.py  test_decapitator.py  test_delay.py  test_dialog_handler.py  test_engine.py  test_eq232d.py  test_eq_engine_edges.py  test_eq_intent.py  test_fx.py  test_fx_builder.py  test_gain_staging.py  test_gain_staging_edges.py  test_hall_verb.py  test_inflator.py  test_integration.py  test_loudness_optimizer.py  test_maag.py  test_master_templates.py  test_mastering.py  test_microshift.py  test_midi_tempo.py  test_mixing_workflow.py  test_multi_track_backing.py  test_normalize.py  test_plate_verb.py  test_plugin_registry.py  test_preview.py  (+17 more)
tools/: batch_test_6_genres.py  bx2098_calibration.json  discover_spatial_params.py  discovered_params.json  run_pop_chain.py  verify_dialog_killer.py  verify_master_templates.py
