[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hermes-core"
version = "0.3.0"
description = "REAPER DAW automation - lean 3-layer engine"
requires-python = ">=3.11,<3.14"
dependencies = ["python-reapy>=0.10", "numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=6"]

[tool.pytest.ini_options]
markers = ["unit: no REAPER required", "integration: requires running REAPER"]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--cov=src/hermes_core", "--cov-report=term-missing"]
