[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hermes-core"
version = "0.3.0"
description = "REAPER DAW automation — lean 3-layer Python engine for non-interactive mixing workflows"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Zhao Jin"}]
keywords = ["reaper", "daw", "audio", "mixing", "mastering", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
dependencies = [
    "python-reapy>=0.10",
    "numpy>=1.24",
    "soundfile>=0.12",
    "pyloudnorm>=0.1",
    "pyyaml>=6.0",
]

[project.scripts]
hermes = "hermes_core.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=6"]
dev = ["ruff", "mypy"]

[tool.pytest.ini_options]
markers = ["unit: no REAPER required", "integration: requires running REAPER"]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--cov=src/hermes_core", "--cov-report=term-missing"]
